syntax = "proto3";

package monitor_v1;

option go_package = "internal/monitor/monitor_v1";

service MonitorAPI {
  rpc GetMinimalLoadedServerData(Empty) returns (ServerDataResponse);
}

message Empty {}

message CookieContainer {
  string key = 1;
  string value = 2;
}

message ServerDataResponse {
  string ip = 1;
  int64 portUI = 2;
  string pathUI = 3;
  string username = 4;
  string password = 5;
  repeated CookieContainer cookies = 6;
}